[gd_scene format=3 uid="uid://dtu7noaxo562u"]

[ext_resource type="Texture2D" uid="uid://ddtvai8bt46wb" path="res://art/sprites/enemy_placeholder.png" id="1_gsiem"]
[ext_resource type="Script" uid="uid://daxfmwslyrg8n" path="res://scenes/enemies/enemy_base.gd" id="1_o10tv"]
[ext_resource type="Shader" uid="uid://cd0q8jdhx5vpx" path="res://shaders/flash.gdshader" id="2_01wx1"]
[ext_resource type="Script" uid="uid://bi05h4nyrvhx4" path="res://scenes/sprite_flash.gd" id="4_hm7hm"]
[ext_resource type="Script" path="res://scenes/animated_sprite_flash.gd" id="5_2kgy0"]
[ext_resource type="Texture2D" uid="uid://b6lvgfsxxk6us" path="res://art/sprites/circle.png" id="5_hm0mn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hm7hm"]
resource_local_to_scene = true
shader = ExtResource("2_01wx1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_evjv1"]
resource_local_to_scene = true
shader = ExtResource("2_01wx1")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_evjv1"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o10tv"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hm7hm"]
radius = 20.0

[node name="SimpleEnemy2" type="CharacterBody2D" unique_id=616659278]
collision_layer = 4
collision_mask = 9
platform_on_leave = 2
script = ExtResource("1_o10tv")
health = 100.0

[node name="EnemyPlaceholder" type="Sprite2D" parent="." unique_id=864650589]
material = SubResource("ShaderMaterial_hm7hm")
position = Vector2(0, -8)
texture = ExtResource("1_gsiem")
script = ExtResource("4_hm7hm")

[node name="EnemySpritesheet" type="AnimatedSprite2D" parent="." unique_id=1062563798]
material = SubResource("ShaderMaterial_evjv1")
script = ExtResource("5_2kgy0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1783457394]
shape = SubResource("CircleShape2D_evjv1")

[node name="DetectionArea" type="Area2D" parent="." unique_id=1472084244]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" unique_id=1297026147]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_o10tv")

[node name="AttackArea" type="Area2D" parent="." unique_id=1371594350]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea" unique_id=699821842]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_hm7hm")
debug_color = Color(0.9918476, 0, 0.2662707, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." unique_id=2132310080]
path_postprocessing = 1
avoidance_enabled = true
max_speed = 500.0

[node name="PathfindingTimer" type="Timer" parent="." unique_id=1834030345]
autostart = true

[node name="AttackSprite" type="Sprite2D" parent="." unique_id=34156837]
modulate = Color(1, 0, 0, 0)
position = Vector2(1, -6)
scale = Vector2(0.22, 0.22)
texture = ExtResource("5_hm0mn")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="PathfindingTimer" to="." method="_on_pathfinding_timer_timeout"]
